# advent_of_code

./: README.md
2018/day01/: .tool-versions  solution.ex
2021/: CMakeLists.txt  readme.md
2021/src/: file.c  file.h  main.cc
2021/src/day1/part1/: main.c
2021/src/day1/part2/: helpers.c  helpers.h  helpers_test.cc  main.c
2021/src/day2/: part1.c  part2.c  point.c  point.h  point_test.cc
2021/src/day3/: part1.c  part1.h  part2.c  part2.h  test.cc
2021/src/day4/: part1.cc  part1.h  part2.cc  part2.h
2021/src/day4/test/: test.cc  test_input.txt
2024/day1/: script.exs
